fixed horizontal scrollbar issue at main page

--- a/src/app/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/components/navigation-bar/navigation-bar.component.scss
@@ -1,6 +1,6 @@
 .navigation-container {
   height: 202px;
-  width: 100vw;
+  width: 100%;
   margin-bottom: 55px;
   overflow: hidden;
   // background-color: blue;
